--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="daily">Daily</string>
     <string name="min">Min:</string>
     <string name="max">Max:</string>
+    <string name="find_your_city">Find your city</string>
+    <string name="search">Search</string>
 </resources>
